목록에서 장소를 클릭하면 해당 위치로 지도 이동

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,12 +47,21 @@ body {
 
 .sidebar {
   flex: 0 1 30%;
-  margin-right: 3rem;
 
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
 }
+
+.placelists {
+  list-style: none;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+// .placelists::-webkit-scrollbar {
+//   width: 0;
+// }
 
 .footer {
   align-self: center;
