--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,15 @@
 
 :root {
   --color-primary: rgba(86, 214, 194);
-  // --color-secondary: rgba(249, 186, 53);
+  --color-secondary: rgba(249, 186, 53);
   --color-dark: rgba(0, 0, 0);
 }
+
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; // 1200px / 16px
+$bp-large: 62.5em; // 1000px / 16px
+$bp-medium: 50em; // 800px / 16px
+$bp-small: 37.5em; // 600px / 16px
 
 * {
   margin: 0;
@@ -21,26 +27,44 @@ html {
   box-sizing: border-box;
   /* 1rem = 10px, 10px/16px = 62.5% */
   font-size: 62.5%;
+
+  // 화면 가로 1200px 아래면 font-size가 50%로 바뀐다.
+  // @media only screen and (max-width: $bp-large) {
+  //   font-size: 50%;
+  // }
 }
 
 body {
   font-family: 'Gaegu', cursive;
   font-weight: 400;
+  font-size: 1.5rem;
   line-height: 1.6;
   color: var(--color-dark);
+
   height: 100vh;
-  // background-color: var(--color-primary);
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(86, 214, 194, 0.7),
-      rgba(249, 186, 53, 0.7)
-    ),
-    url(../img/singstreet-poster.jpg);
+
+  background-image: url(../img/singstreet-poster.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(86, 214, 194, 0.9),
+    rgba(249, 186, 53, 0.9)
+  );
+
+  box-shadow: 10px 10px 30px rgba(55, 55, 55, 0.9);
+
   padding: 3rem;
+  width: 120rem;
+  height: 90%;
 
   display: flex;
 }
@@ -51,23 +75,157 @@ body {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+
+  margin-right: 3rem;
+}
+
+.titlebox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 3rem;
+  // margin-right: 3rem;
+
+  &__image {
+    width: 7rem;
+    margin-right: 1.5rem;
+  }
+
+  &__heading {
+    display: flex;
+    flex-direction: column;
+
+    font-size: 3rem;
+    line-height: 1.3;
+    color: white;
+    text-shadow: 1px 1px 1px var(--color-secondary),
+      1px 2px 1px var(--color-secondary), 1px 3px 1px var(--color-primary),
+      1px 4px 1px var(--color-primary), 1px 5px 1px var(--color-secondary),
+      1px 6px 1px var(--color-secondary), 1px 10px 5px rgba(16, 16, 16, 0.5),
+      1px 15px 10px rgba(16, 16, 16, 0.4), 1px 20px 30px rgba(16, 16, 16, 0.3),
+      1px 25px 50px rgba(16, 16, 16, 0.2);
+  }
 }
 
 .placelists {
+  flex: 0 1 auto;
+
   list-style: none;
-  height: 100%;
+  // height: 30rem;
   overflow-y: scroll;
+
+  // background-color: rgb(255, 255, 255, 0.3);
+
+  display: flex;
+  flex-direction: column;
 }
 
-// .placelists::-webkit-scrollbar {
-//   width: 0;
+.placelists::-webkit-scrollbar {
+  width: 0;
+}
+
+// 기본, 다 숨겨지고 사진이랑 이름만 뜨는 모습
+// .placelist {
+//   // display: flex;
+//   // align-items: center;
+//   cursor: pointer;
+
+//   &:not(:last-child) {
+//     margin-bottom: 1.7rem;
+//   }
+
+//   &__box {
+//     // flex: 1 1 auto;
+
+//     display: flex;
+//     justify-content: space-between;
+//   }
+
+//   &__image {
+//     width: 5rem;
+//     height: 5rem;
+//     object-fit: cover;
+//     border-radius: 100%;
+//     border: 2px solid white;
+//   }
+
+//   &__name {
+//   }
+
+//   &__address {
+//     display: none;
+//   }
+
+//   &__description {
+//     display: none;
+//   }
+
+//   &__button {
+//     // flex: 0 0 23%;
+//     display: none;
+//   }
 // }
+
+// 상세한 정보 뜨는거(리스트 펴졌을 때)
+.placelist {
+  // display: flex;
+  // align-items: center;
+  cursor: pointer;
+
+  padding: 1.7rem;
+
+  &:hover {
+    background-color: rgb(255, 255, 255, 0.3);
+  }
+
+  // &:not(:last-child) {
+  //   margin-bottom: 1.7rem;
+  // }
+
+  &__box {
+    // flex: 1 1 auto;
+
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+  }
+
+  &__image {
+    // flex: 0 1 10%;
+    height: 10rem;
+    object-fit: cover;
+    // object-fit: contain;
+    // border-radius: 100%;
+    // border: 2px solid white;
+  }
+
+  &__name {
+    // display: block;
+  }
+
+  &__address {
+  }
+
+  &__description {
+  }
+
+  &__button {
+    // flex: 0 0 23%;
+  }
+}
 
 .footer {
   align-self: center;
+
+  margin-top: 2rem;
 }
 
 #map {
-  flex: 1;
+  flex: 1 0 auto;
   height: 100%;
+}
+
+.hidden {
+  display: none;
 }
