--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,8 @@
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em; // 1200px / 16px
 $bp-large: 62.5em; // 1000px / 16px
-$bp-medium: 50em; // 800px / 16px
-$bp-small: 37.5em; // 600px / 16px
+$bp-medium: 50em; // 700px / 16px
+$bp-small: 21.88em; // 350px / 16px
 
 * {
   margin: 0;
@@ -29,9 +29,13 @@ html {
   /* 1rem = 10px, 10px/16px = 62.5% */
   font-size: 62.5%;
 
-  // 화면 가로 1000px 아래면 font-size가 50%로 바뀐다.
+  // 화면 가로 1000px 아래면 font-size가 60%로 바뀐다.
   @media only screen and (max-width: $bp-large) {
-    font-size: 50%;
+    font-size: 60%;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 45%;
   }
 }
 
@@ -68,6 +72,19 @@ body {
   height: 90%;
 
   display: flex;
+
+  @media only screen and (max-width: $bp-largest) {
+    height: 100%;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    width: 100%;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+    padding: 2rem;
+  }
 }
 
 .sidebar {
@@ -78,6 +95,10 @@ body {
   justify-content: space-between;
 
   margin-right: 3rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    margin-right: 0rem;
+  }
 }
 
 .titlebox {
@@ -90,6 +111,15 @@ body {
   &__image {
     width: 7rem;
     margin-right: 1.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 3.6rem;
+      transform: translate(0, 4px);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      width: 7rem;
+    }
   }
 
   &__heading {
@@ -105,6 +135,21 @@ body {
       1px 6px 1px var(--color-secondary), 1px 10px 5px rgba(16, 16, 16, 0.5),
       1px 15px 10px rgba(16, 16, 16, 0.4), 1px 20px 30px rgba(16, 16, 16, 0.3),
       1px 25px 50px rgba(16, 16, 16, 0.2);
+
+    @media only screen and (max-width: $bp-medium) {
+      flex-direction: row;
+    }
+
+    & > span:first-child {
+      @media only screen and (max-width: $bp-medium) {
+        margin-right: 1rem;
+      }
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      margin-right: 0;
+    }
   }
 }
 
@@ -116,10 +161,14 @@ body {
 
   display: flex;
   flex-direction: column;
-}
 
-.placelists::-webkit-scrollbar {
-  width: 0;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: row;
+  }
 }
 
 .placelist {
@@ -128,6 +177,10 @@ body {
 
   cursor: pointer;
   padding: 1.7rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    height: 27rem;
+  }
 
   &:hover {
     background-color: rgb(255, 255, 255, 0.3);
@@ -144,6 +197,17 @@ body {
     justify-content: space-between;
 
     position: relative;
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 23rem;
+
+      flex-wrap: nowrap;
+      overflow-y: scroll;
+
+      &::-webkit-scrollbar {
+        width: 0;
+      }
+    }
   }
 
   &__image {
@@ -165,15 +229,20 @@ body {
     margin-bottom: 2rem;
   }
 
-  &__description {
-  }
-
   &__button {
     align-self: stretch;
     margin-top: 2rem;
 
     padding: 0.5rem;
     border: none;
+
+    @media only screen and (max-width: $bp-large) {
+      font-size: 60%;
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 45%;
+    }
 
     &:hover {
       transform: translateY(-2px);
@@ -194,6 +263,12 @@ body {
 
   display: flex;
   align-items: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    position: fixed;
+    bottom: 0px;
+    margin-bottom: 2.5rem;
+  }
 
   &__image {
     height: 1.6rem;
@@ -236,6 +311,10 @@ body {
 #map {
   flex: 1;
   height: 100%;
+
+  @media only screen and (max-width: $bp-medium) {
+    margin-bottom: 4.5rem;
+  }
 }
 
 .leaflet-popup .leaflet-popup-content {
@@ -249,4 +328,3 @@ body {
 .unvisited .leaflet-popup-content-wrapper {
   border-left: 5px solid rgb(180, 57, 57);
 }
-////////////////////////////////////////////////////////////////
